# enocean-device-manager

./: .eodm  .gitignore  .json  .pre-commit-config.yaml  .yaml  LICENSE  MANIFEST.in  README.md  build_exe.bat  changes.md  const.py  controller.py  data.py  demo.eodm  demo2.eodm  demo_2.eodm  demo_3.eodm  demo_3.yaml  eo-man.bat  eo_man.bat  ha_config.yaml  ha_config_usb300.yaml  install_from_official_releases.bat  install_from_officials_on_ubuntu.sh  install_from_repo.bat  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: lint.yml  pypi-publish.yml  release.yml
.test_env/: pyvenv.cfg
.test_env/Scripts/: activate  activate.bat
data/: __init__.py  data.py  data_helper.py  data_manager.py  device.py  filter.py
docs/: README.md  supported-devices.md
docs/burst_test/: README.md
docs/commandline-enocean-logger/: README.md
docs/getting-started/: readme.md
docs/load-pct14-data/: readme.md
eo-man/: __main__.py
eo-man/controller/: app_bus.py  serial_controller.py
eo-man/data/: application_data.py  const.py  data_helper.py  data_manager.py  device.py  filter.py  homeassistant_const.py
eo-man/view/: about_window.py  device_details.py  device_table.py  filter_bar.py  log_output.py  main_panel.py  menu_presenter.py  serial_communication_bar.py  status_bar.py  tool_bar.py
eo_man/: __init__.py  __main__.py
eo_man/controller/: app_bus.py  bus_burst_tester.py  enocean_logger.py  esp3_serial_com.py  gateway_registry.py  lan_service_detector.py  network_gateway_detector.py  serial_controller.py  serial_port_detector.py
eo_man/data/: app_info.py  application_data.py  const.py  data_helper.py  data_manager.py  device.py  filter.py  ha_config_generator.py  message_history.py  pct14_data_manager.py  recorded_message.py
eo_man/data/homeassistant/: __init__.py  const.py
eo_man/icons/: image_gallary.py  test.py
eo_man/view/: __init__.py  about_window.py  checklistcombobox.py  device_details.py  device_info_window.py  device_table.py  donation_button.py  eep_checker.py  eep_checker_window.py  filter_bar.py  log_output.py  main_panel.py  menu_presenter.py  send_message_window.py  serial_communication_bar.py  sponsor_button.py  status_bar.py  tool_bar.py
tests/: mocks.py  test_app_config.py  test_base_id_utils.py  test_detecting_usb.py  test_generate_docs.py  test_pct14_import.py
tests/resources/: 20240925_PCT14_export_test.xml  20240925_PCT14_export_test_GENERATED.xml  20240925_PCT14_export_test_extended.xml  20260108_logger_test.eodm  202604029Testwand.xml  test_app_config_1.eodm
view/: __init__.py  about_window.py  device_details.py  device_table.py  filter_bar.py  log_output.py  main_panel.py  menu_presenter.py  serial_communication_bar.py  status_bar.py  tool_bar.py
