[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[project]
name = "eo_man"
version = "0.1.40"
description = "Tool to managed EnOcean Devices and to generate Home Assistant Configuration."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT" }
keywords = ["enocean", "device manager", "eltako"]
authors = [
    { name = "Philipp Grimm" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "aiocoap==0.4.7", "eltako14bus==0.0.64", "numpy==1.26.3", "pillow==10.2.0", "pyserial==3.5", "pyserial-asyncio==0.6", "PyYAML==6.0.1", "StrEnum==0.4.15", "termcolor==2.4.0", "tkinterhtml==0.7", "requests==2.31.0", "enocean==0.60.1", "esp2_gateway_adapter==0.2.18", "zeroconf==0.132.2", "tkScrolledFrame==1.0.4", "xmltodict", "tomli"
]

[project.urls]
Homepage = "https://github.com/grimmpp/enocean-device-manager"
Documentation = "https://github.com/grimmpp/enocean-device-manager/tree/main/docs/getting-started"
Repository = "https://github.com/grimmpp/enocean-device-manager.git"

[tool.setuptools]
include-package-data = true  # Enables package data inclusion

[tool.setuptools.package-dir]
"eo_man" = "eo_man"

[tool.setuptools.package-data]
"eo_man" = ["icons/*.png", "icons/*.bmp", "icons/*.ico", "icons/*.jpg"]


# [project.script]
# eo_man_script = "eo_man.__main__:main"

# [project.gui-script]
# eo_man_gui  = "eo_man.__main__:main"